fix(frontend): update no scrollbar class

--- a/packages/frontend/src/global.css
+++ b/packages/frontend/src/global.css
@@ -20,6 +20,11 @@
 
 .scrollbar-none {
     scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
 }
 
 .shadow-horizontal-scroller {
